Fix the Responsive Hover Issue of the Cancel Button, Main Page
If the user put the cursor down after the About entity, then it will hover the invisible part of the Cancel button when it is not responsive.

--- a/Transcyclopedia/css_assets/responsive_function.css
+++ b/Transcyclopedia/css_assets/responsive_function.css
@@ -22,6 +22,11 @@
         width: 100%;
     }
 
+    .left_navbar .x:hover {
+        background-color: #39bf5898;
+        transition: 0.5s;
+    }
+
     .show_and_hide_info {
         width: 43vw;
     }
